tests/snapshots/tui_snapshots__fragmap_mixed_columns.snap
---
source: tests/tui_snapshots.rs
assertion_line: 354
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 12 },
    content: [
        "SHA        Title                                                       │  Hu    ",
        "aaaa1111   Add feature A                                               │  ██    ",
        "bbbb3333   Touch both files                                            │  █│    ",
        "cccc5555   Fix feature A                                               │  █│    ",
        "dddd7777   Polish feature A                                            │  ██    ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        " aaaa11112222 4/4                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 71, y: 0, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 71, y: 1, fg: White, bg: Blue, underline: Reset, modifier: REVERSED,
        x: 72, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 74, y: 1, fg: White, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 76, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 0, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 2, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 3, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
