tests/snapshots/tui_snapshots__fragmap_squashable_pair.snap
---
source: tests/tui_snapshots.rs
assertion_line: 260
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                        Hu      ",
        "aaaa1111   Add config file                                              █       ",
        "bbbb3333   Unrelated change                                             │█      ",
        "cccc5555   Fix config typo                                              █       ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " aaaa11112222 3/3                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 72, y: 1, fg: White, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 73, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
